index header 완성?

--- a/project/nav.html
+++ b/project/nav.html
@@ -92,10 +92,7 @@
     </script>
 </head>
 <body>
-    <div class="wrap header">
-        <header>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni et cupiditate cum quas maiores rerum? Deserunt, vel error mollitia cupiditate ad alias corrupti sunt aliquam veniam rem? Consectetur, id soluta?</p>
-        </header>
+    <div class="wrap">
         <nav>
             <div id="point">
                 <div class="point-left point-box active">
@@ -1168,35 +1165,6 @@
                 </div>
             </div>
         </nav>
-    </div>
-    <div class="wrap content">
-        <div id="content">
-            <section>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quam a voluptas adipisci dolores quae unde ex repudiandae ratione, eaque voluptates non cum nulla pariatur praesentium blanditiis ipsum, excepturi sed!</p>
-            </section>
-            <div>
-                <ul>
-                    <li><button></button></li>
-                </ul>
-            </div>
-            <section>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quam a voluptas adipisci dolores quae unde ex repudiandae ratione, eaque voluptates non cum nulla pariatur praesentium blanditiis ipsum, excepturi sed!</p>
-            </section>
-            <section>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quam a voluptas adipisci dolores quae unde ex repudiandae ratione, eaque voluptates non cum nulla pariatur praesentium blanditiis ipsum, excepturi sed!</p>
-            </section>
-            <section>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quam a voluptas adipisci dolores quae unde ex repudiandae ratione, eaque voluptates non cum nulla pariatur praesentium blanditiis ipsum, excepturi sed!</p>
-            </section>
-            <section>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quam a voluptas adipisci dolores quae unde ex repudiandae ratione, eaque voluptates non cum nulla pariatur praesentium blanditiis ipsum, excepturi sed!</p>
-            </section>
-        </div>
-    </div>
-    <div class="wrap footer">
-        <footer>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora sed pariatur quasi eaque officia officiis ex, odit dolores, placeat provident illum dolore voluptates expedita ratione ipsa voluptas quos natus nostrum.</p>
-        </footer>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
