--- a/project/main.html
+++ b/project/main.html
@@ -61,7 +61,7 @@
         </p>
       </nav>
     </div>
-    <div class="wrap content">
+    <div class="wrap">
       <main>
         <div id="content">
           <section class="First VVIP 채용관">
@@ -193,7 +193,7 @@
           </section>
           <section class="sliderwrap">
             <!--todo 슬라이더-->
-            <div>
+            <div class="flow_banner_box">
               <div>
                 <div>
                   <div>
@@ -341,7 +341,7 @@
                 </div>
               </li>
               <li>
-                <div>
+                <div class="logo">
                   <img
                     src="https://imgs.jobkorea.co.kr/Images/Logo/180/k/f/2293v00vyriri86_2020f7bfgri862vf.gif?p=y&hash=c&upddt=20230622165543"
                     alt=""
