--- a/project/nav.html
+++ b/project/nav.html
@@ -98,8 +98,8 @@
                 <div class="point-left point-box active">
                     <div class="tab-menu">
                         <ul class="tab-menu1 person-tab active">
-                            <li class="tab-menu1-1 active" data-contentnumber="1"><a href="# return false;" id="news"># 공채속보</a></li>
-                            <li class="tab-menu1-1" data-contentnumber="2"><a href="# return false;" id="AI"># AI추천</a></li>
+                            <li class="tab-menu1-1 active" data-contentnumber="1"><a href="# return false;"># 공채속보</a></li>
+                            <li class="tab-menu1-1" data-contentnumber="2"><a href="# return false;"># AI추천</a></li>
                             <li class="tab-menu1-1" data-contentnumber="3"><a href="# return false;"># 전문채용관</a></li>
                             <li class="tab-menu1-1" data-contentnumber="4"><a href="# return false;"># 기업·연봉</a></li>
                             <li class="tab-menu1-1" data-contentnumber="5"><a href="# return false;"># 진로탐색</a></li>
@@ -119,7 +119,7 @@
                         </ul>
                     </div>
                     <!--공채속보-->
-                    <div class="tab-cont contents-news active" id="news" data-contentnumber="1">
+                    <div class="tab-cont contents-news active" data-contentnumber="1">
                         <div class="match-slide">
                             <div class="swiper-container sw-container swiper-container-initialized swiper-container-horizontal">
                                 <div class="swiper-wrapper wrap-menu">
@@ -315,7 +315,7 @@
                     </div>
                     <!--//공채속보-->
                     <!-- AI추천 -->
-                    <div class="tab-cont contents-ai" id="AI" data-contentnumber="2">
+                    <div class="tab-cont contents-ai" data-contentnumber="2">
                         <div class="match-slide">
                             <div class="swiper-container sw-container swiper-container-initialized swiper-container-horizontal">
                                 <div class="swiper-wrapper wrap-menu">
