스크랩버튼 수정, 그리드 호버 기능 추가

--- a/project/main.html
+++ b/project/main.html
@@ -309,7 +309,7 @@
                 <div id="applyscrap">
                   <button onclick="" class="applynow">즉시지원</button>
                   <div class="applydateWithApply">D-8</div>
-                  <button onclick="" class="scrap">채용정보 스크랩</button>
+                  <button class="scrap"></button>
                 </div>
               </li>
               <li>
