--- a/project/header.html
+++ b/project/header.html
@@ -41,7 +41,12 @@
 
             $('.btnAllService').click(function() {
                 $('.allArea').toggleClass("active");
-                $('.jkNavDimm').toggleClass("on");
+                $('.jkNavDimm-click').toggleClass("on");
+            })
+
+            $('#gnbGi').hover(function() {
+                $('#gnbGi').toggleClass("open");
+                $('.jkNavDimm-hover').toggleClass("on");
             })
         });
     </script>
@@ -646,7 +651,6 @@
                     </div>
                 </div>
             </div>
-            <div class="jkNavDimm"></div>
             <div id="banner-area">
                 <div class="bnr-big"><a href="https://yellow.contentsfeed.com/RealMedia/ads/click_lx.ads/jobkorea/main/L13/1511508775/Top3/jobkorea/230623_voxelmaps_mb_s/230623_voxelmaps_mb.html/41643134773253614c45454143467172" target="_blank"><img src="//apple.contentsfeed.com/RealMedia/ads/Creatives/jobkorea/230623_voxelmaps_mb_s/230626_voxelmaps_75090.png" alt="대체텍스트"></a></div>
                 <div class="bnr-service">
@@ -677,6 +681,8 @@
                 </div>
                 <div class="bnr-marketing"><a href="https://yellow.contentsfeed.com/RealMedia/ads/click_lx.ads/jobkorea/main/L13/392175146/Right3/jobkorea/230421_jnshipjump_mr_s/230413_jklotte_mr.html/41643134773253614c45454143545249" target="_blank"><img src="//apple.contentsfeed.com/RealMedia/ads/Creatives/jobkorea/230421_jnshipjump_mr_s/230510_jnshipjump_260_90.png" border="0" alt="전남조선업도약센터 "></a></div>
             </div>
+            <div class="jkNavDimm-click"></div>
+            <div class="jkNavDimm-hover"></div>
         </header>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
