--- a/project/footer.html
+++ b/project/footer.html
@@ -29,24 +29,19 @@
                         <li><a href="https://www.jobkorea.co.kr/service/company/learning">기업러닝</a></li>
                     </ul>
                     <span class="footer__notice_service"><a
-                            href="https://www.jobkorea.co.kr/service/sitemap">더보기</a></span>
+                            href="https://www.jobkorea.co.kr/service/sitemap"><em>더보기</em></a></span>
                 </div>
 
                 <div class="footer__service">
                     <ul>
                         <li><a href="https://jobkoreacareer.oopy.io">회사소개</a></li>
                         <li><a href="http://company.jobkorea.co.kr/service/default.asp">운영사이트</a></li>
-                        <li><a href="https://www.jobkorea.co.kr/service_jk/provision/provision_gg.asp"
-                                target="_blank">이용약관</a></li>
-                        <li><a href="https://www.jobkorea.co.kr/service/PolicyPrivacy"
-                                target="_blank"><strong>개인정보처리방침</strong></a></li>
-                        <li><a href="https://www.jobkorea.co.kr/service/ProvisionLOC"
-                                target="_blank"><strong>위치기반서비스이용약관</strong></a></li>
+                        <li><a href="https://www.jobkorea.co.kr/service_jk/provision/provision_gg.asp">이용약관</a></li>
+                        <li><a href="https://www.jobkorea.co.kr/service/PolicyPrivacy"><strong>개인정보처리방침</strong></a></li>
+                        <li><a href="https://www.jobkorea.co.kr/service/ProvisionLOC"><strong>위치기반서비스이용약관</strong></a></li>
                         <li><a href="http://company.jobkorea.co.kr/network/api.asp">Open API</a></li>
                         <li><a href="https://www.jobkorea.co.kr/service/company/ad">광고문의</a></li>
-                        <li><a href="http://company.jobkorea.co.kr/network/default.asp#Partners"
-                                target="_blank">제휴문의</a>
-                        </li>
+                        <li><a href="http://company.jobkorea.co.kr/network/default.asp#Partners">제휴문의</a></li>
                         <li><a href="https://www.jobkorea.co.kr/help/faq/user">고객센터</a></li>
                     </ul>
                 </div>
@@ -69,24 +64,31 @@
                     </dl>
                     <dl class="footer__help-wrap footer__help-wrap--consult">
                         <a href="https://talk.naver.com/ct/wcb8l5" target="_blank" title="새창" class="footer__help-link">
+                            <img src="/project/images/톡톡.jpg" width="20" height="20">
                             <span class="footer__help--icon"></span>
                             <span class="footer__help--text">톡톡상담</span>
                         </a>
                     </dl>
                     <ul class="footer__sns">
-                        <li class="footer__sns-item"><a href="https://blog.naver.com/jobkorea1"><span
+                        <li class="footer__sns-item"><a href="https://blog.naver.com/jobkorea1">
+                            <img src="/project/images/blog.png" width="20", height="20"><span
                                     class="skip">블로그</span></a></li>
-                        <li class="footer__sns-item"><a href="https://m.post.naver.com/my.nhn?memberNo=9028903"><span
+                        <li class="footer__sns-item"><a href="https://m.post.naver.com/my.nhn?memberNo=9028903">
+                            <img src="/project/images/post.png" width="20", height="20"><span
                                     class="skip">포스트</span></a></li>
-                        <li class="footer__sns-item"><a href="https://www.facebook.com/jobkorea"><span
+                        <li class="footer__sns-item"><a href="https://www.facebook.com/jobkorea">
+                            <img src="/project/images/facebook.png" width="20", height="20"><span
                                     class="skip">페이스북</span></a></li>
-                        <li class="footer__sns-item"><a href="https://www.instagram.com/jobkorea_albamon/"><span
+                        <li class="footer__sns-item"><a href="https://www.instagram.com/jobkorea_albamon/">
+                            <img src="/project/images/instagram.png" width="20", height="20"><span
                                     class="skip">인스타그램</span></a></li>
                         <li class="footer__sns-item"><a
-                                href="https://www.youtube.com/channel/UCOrdY3p46GJh_CYacfwYieg"><span
+                                href="https://www.youtube.com/channel/UCOrdY3p46GJh_CYacfwYieg">
+                                <img src="/project/images/youtube.png" width="20", height="20"><span
                                     class="skip">유튜브</span></a></li>
                     </ul>
                 </div>
+                
                 <div class="footer__company">
                     <div class="footer__company-item footer__company-item--address">서울시 서초구 서초대로 301 동익성봉빌딩 16~18층 잡코리아
                     </div>
@@ -105,25 +107,24 @@
 
                 <div class="footer__award">
                     <ul class="clear">
-                        <li class="footer__award-item footer__award-item--kbpi"><a
-                                href="https://www.jobkorea.co.kr/help/notice/view?no=14626">2023 한국산업의
+                        <li class="footer__award-item footer__award-item--kbpi">
+                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=14626" align="left">2023 한국산업의
                                 브랜드파워 1위<br />(취업전문포털 부문)</a></li>
-                        <li class="footer__award-item footer__award-item--bcli"><a
-                                href="https://www.jobkorea.co.kr/help/notice/view?no=14427" target="_blank">2022 브랜드 고객
+                        <li class="footer__award-item footer__award-item--bcli">
+                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=14427" target="_blank">2022 브랜드 고객
                                 충성도<br>대상 수상</a></li>
-                        <li class="footer__award-item footer__award-item--ismsp"><a
-                                href="https://www.jobkorea.co.kr/help/notice/view?no=14625" target="_blank">[인증범위] 온라인
+                        <li class="footer__award-item footer__award-item--ismsp">
+                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=14625" target="_blank">[인증범위] 온라인
                                 리크루팅 서비스<br />[유효기간] 2022.01.19 ~ 2025.01.18</a></li>
-                        <li class="footer__award-item footer__award-item--fav"><a
-                                href="https://www.jobkorea.co.kr/help/notice/view?no=14276" target="_blank"> <img
-                                    src="/project/images/check.png"> 한국대학신문
-                                대상<br>취업플랫폼 선호도 1위</a></li>
-                        <li class="footer__award-item footer__award-item--kict"><a
-                                href="https://www.jobkorea.co.kr/help/notice/view?no=13874" target="_blank">업계최초!
+                        <li class="footer__award-item footer__award-item--fav">
+                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=14276" target="_blank">
+                                한국대학신문 대상<br>취업플랫폼 선호도 1위</a></li>
+                        <li class="footer__award-item footer__award-item--kict">
+                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=13874" target="_blank">업계최초!
                                 K-ICT<br>정보보호대상 우수상 수상</a></li>
 
                     </ul>
-                    <a href="http://company.jobkorea.co.kr/cyber_pr/default.asp#award" target="_blank"
+                    <a href="http://company.jobkorea.co.kr/cyber_pr/default.asp#award" class="footer__award--more awardMore" target="_blank"
                         class="footer__award--more awardMore">더보기</a>
                 </div>
 
@@ -144,7 +145,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
