--- a/project/header.html
+++ b/project/header.html
@@ -47,35 +47,35 @@
             $('#gnbGi').hover(function() {
                 if(!$('.allArea').hasClass("active")) {
                     $('#gnbGi').toggleClass("open");
-                    $('.jkNavDimm-hover').toggleClass("on");
+                    $('.jkNavDimm-hover1').toggleClass("on");
                 }
             })
 
             $('#gnbStart').hover(function() {
                 if(!$('.allArea').hasClass("active")) {
                     $('#gnbStart').toggleClass("open");
-                    $('.jkNavDimm-hover').toggleClass("on");
+                    $('.jkNavDimm-hover2').toggleClass("on");
                 }
             })
 
             $('#gnbHh').hover(function() {
                 if(!$('.allArea').hasClass("active")) {
                     $('#gnbHh').toggleClass("open");
-                    $('.jkNavDimm-hover').toggleClass("on");
+                    $('.jkNavDimm-hover3').toggleClass("on");
                 }
             })
 
             $('#gnbSalary').hover(function() {
                 if(!$('.allArea').hasClass("active")) {
                     $('#gnbSalary').toggleClass("open");
-                    $('.jkNavDimm-hover').toggleClass("on");
+                    $('.jkNavDimm-hover4').toggleClass("on");
                 }
             })
 
             $('#futurelab').hover(function() {
                 if(!$('.allArea').hasClass("active")) {
                     $('#futurelab').toggleClass("open");
-                    $('.jkNavDimm-hover').toggleClass("on");
+                    $('.jkNavDimm-hover5').toggleClass("on");
                 }
             })
         });
@@ -712,7 +712,11 @@
                 <div class="bnr-marketing"><a href="https://yellow.contentsfeed.com/RealMedia/ads/click_lx.ads/jobkorea/main/L13/392175146/Right3/jobkorea/230421_jnshipjump_mr_s/230413_jklotte_mr.html/41643134773253614c45454143545249" target="_blank"><img src="//apple.contentsfeed.com/RealMedia/ads/Creatives/jobkorea/230421_jnshipjump_mr_s/230510_jnshipjump_260_90.png" border="0" alt="전남조선업도약센터 "></a></div>
             </div>
             <div class="jkNavDimm-click"></div>
-            <div class="jkNavDimm-hover"></div>
+            <div class="jkNavDimm-hover1"></div>
+            <div class="jkNavDimm-hover2"></div>
+            <div class="jkNavDimm-hover3"></div>
+            <div class="jkNavDimm-hover4"></div>
+            <div class="jkNavDimm-hover5"></div>
         </header>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
