--- a/project/index.html
+++ b/project/index.html
@@ -130,7 +130,7 @@
         <!-- nav.html 파일 불러오기 -->
     </div>
     <div class="wrap content">
-        <!-- mainpage_body_.html 파일 불러오기 -->
+        <!-- main.html 파일 불러오기 -->
     </div>
     <div class="wrap footer">
         <!-- footer.html 파일 불러오기 -->
