--- a/project/main.html
+++ b/project/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>실습</title>
+    <title>mainpage main</title>
     <!-- [1] 해상도 - 최적해상도 1250 결정 -->
     <!-- [2] content 영역 1040px 80vw 90% 배치(center) -->
     <!-- [3] reset.css 폴더경로 -->
