--- a/project/header.html
+++ b/project/header.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header</title>
+    <title>Mainpage Header</title>
     <!-- [5] layout 영역 -->
     <link rel="stylesheet" href="css/jobkh_layout.css">
     <!-- [6] header 영역 -->
@@ -375,7 +375,7 @@
                                                         <!-- row01 영역으로 이동 -->
                                                         <div class="sideBtmBx">
                                                             <div class="sideLinkType01">
-                                                                <a href="https://www.jobkorea.co.kr/OnePick/JobList" class="onepick">
+                                                                <a href="./onpick.html" class="onepick">
                                                                     <strong>이직은 원픽</strong>
                                                                 </a>
                                                             </div>
@@ -444,7 +444,7 @@
                                 <!-- 신입공채 레이어 // -->
                             </li>
                             <li class="navItem lyNull theme" id="theme">
-                                <a href="https://www.jobkorea.co.kr/OnePick/JobList" class="linkItem"><span class="spNav"><span class="txIr">원픽</span></span></a>
+                                <a href="./onpick.html" class="linkItem"><span class="spNav"><span class="txIr">원픽</span></span></a>
                             </li>
                             <li id="gnbHh" class="navItem hh">
                                 <a href="https://www.jobkorea.co.kr/headhunting/home" class="linkItem"><span class="spNav"><span class="txIr">헤드헌팅</span></span></a>
