--- a/project/nav.html
+++ b/project/nav.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>실습</title>
+    <title>Mainpage Nav</title>
     <!-- [1] 해상도 - 최적해상도 1260 결정 -->
     <!-- [2] content 영역 1260px 설정 -->
     <!-- [3] reset.css 폴더경로 -->
@@ -1151,7 +1151,7 @@
                         <div class="rcmd">
                             <p class="tit">추천 서비스</p>
                             <div class="tags blind">
-                                <p><a href="# return false;" class="onpick"><img src="images/check.svg" width="15px" height="15px"> 이직은 원픽</a></p>
+                                <p><a href="./onpick.html" class="onpick"><img src="images/check.svg" width="15px" height="15px"> 이직은 원픽</a></p>
                                 <p><a href="# return false;"># 합격자소서</a></p>
                                 <p><a href="# return false;"># 인적성·면접후기</a></p>
                                 <p><a href="# return false;"># 공채달력</a></p>
