--- a/project/onpick/onpick_header.html
+++ b/project/onpick/onpick_header.html
@@ -19,7 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <div class="wrap header">
+    <div class="wrap">
         <header>
             header
         </header>
