--- a/project/onpick/onpick_footer.html
+++ b/project/onpick/onpick_footer.html
@@ -19,7 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <div class="footer">
+    <div class="wrap">
         <footer>
             footer
         </footer>
