--- a/project/onpick/onpick_main.html
+++ b/project/onpick/onpick_main.html
@@ -19,7 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <div class="wrap content">
+    <div class="wrap">
         <main>
             main
         </main>
