--- a/project/onpick/onpick_header.html
+++ b/project/onpick/onpick_header.html
@@ -21,7 +21,33 @@
 <body>
     <div class="wrap">
         <header>
-            header
+            <div class="header">
+                <div class="topArea">
+                    <div class="topContent">
+                        <div class="logo">                    
+                            <a href="#"><img src="/project/images/logo_motion_pc.gif">
+                                <strong>JOBKOREA</strong>
+                            </a>
+                            <a href="#">
+                                <span>이직은 원픽</span>
+                            </a>
+                        </div>
+                        <div class="topMenu">
+                            <ul>
+                                <li><a href="#">신입공채</a></li>
+                                <li><a href="#">채용정보</a></li>
+                                <li><a href="#">로그인</a></li>
+                                <li><a href="#">회원가입</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="headBenner" class="head_banner">
+                        <a class="bann-wrap" href="#">
+                            <div class="bann">head banner</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </header>
     </div>
     <!-- swiper 스크립트 -->
