--- a/project/onpick/onpick_nav.html
+++ b/project/onpick/onpick_nav.html
@@ -19,34 +19,43 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
-            var $checkAll = $('input.dev-check-all');
-            var $checkItems = $('input.dev-check-item');
+            var $inputCheckAll = $('input.dev-check-all');
+            var $inputCheckItems = $('input.dev-check-item');
+            var $BtnCheckAll = $('button.dev-check-all');
+            var $BtnCheckItems = $('button.dev-check-item');
             var $recruitTxt = $('.recruitTxt .dev-select-partName');
             var $badgeCount = $('#badgeCount');
 
             // nav swiper 부분 버튼 클릭 기능
-            $checkAll.click(function() {
-                $checkAll.addClass("on");
+            $inputCheckAll.click(function() {
+                $inputCheckAll.addClass("on");
                 $recruitTxt.text("전체");
                 $('button.dev-check-item, button.dev-check-all').removeClass('active'); // 모든 버튼에서 'active' 클래스 제거
-                $('button.dev-check-all').addClass('active');
+                $BtnCheckAll.addClass('active');
                 if ($(this).prop('checked')) {
                     $badgeCount.css('display', 'none');
                     $badgeCount.text('0');
                 }
                 if ($(this).prop('checked')) {
-                    $checkItems.prop('checked', false);
+                    $inputCheckItems.prop('checked', false);
                     e.preventDefault();
                 }
             });
 
-            $checkItems.click(function() {
-                $checkAll.removeClass("on");
+            $inputCheckItems.click(function() {
+                $inputCheckAll.removeClass("on");
                 if ($(this).prop('checked')) {
-                    $checkAll.prop('checked', false);
+                    $inputCheckAll.prop('checked', false);
+                } else if($inputCheckItems.filter(':checked').length === 0) {
+                    $inputCheckAll.addClass("on");
+                    $inputCheckAll.prop('checked', true);
+                    $recruitTxt.text("전체");
+                    $badgeCount.css('display', 'none');
+                    $badgeCount.text('0');
+                    e.preventDefault();
                 }
                 updateResultText();
-                if ($(this).prop('checked')) {
+                if ($inputCheckItems.prop('checked')) {
                     $badgeCount.css('display', 'block');
                     $badgeCount.text('1');
                 } else {
@@ -56,29 +65,31 @@
             });
 
             // 상세검색 버튼 기능
-            $('button.dev-check-all').click(function() {
-                $('button.dev-check-all').addClass("active");
+            $BtnCheckAll.click(function() {
+                $BtnCheckAll.addClass("active");
                 $recruitTxt.text("전체");
                 if ($(this).hasClass('active')) {
-                    $('button.dev-check-item').removeClass('active');
+                    $BtnCheckItems.removeClass('active');
                     e.preventDefault();
                 }
             });
 
-            $('button.dev-check-item').click(function() {
-                $(this).addClass("active");
-                if ($(this).hasClass('active')) {
-                    $('button.dev-check-all').removeClass('active');
+            $BtnCheckItems.click(function() {
+                $(this).toggleClass("active");
+                if ($BtnCheckItems.hasClass('active')) {
+                    $BtnCheckAll.removeClass('active');
+                } else {
+                    $BtnCheckAll.addClass('active');
                 }
             });
 
-            $checkAll.on('click', function(e) {
+            $inputCheckAll.on('click', function(e) {
                 e.preventDefault();
             });
 
             // checked 된 버튼에 따라 원픽공고 오른쪽에 버튼 이름 기재
             function updateResultText() {
-                var selectedItems = $checkItems.filter(':checked');
+                var selectedItems = $inputCheckItems.filter(':checked');
                 var selectedLabels = selectedItems.siblings('label').map(function() {
                     return $(this).text();
                 }).get();
@@ -109,24 +120,37 @@
                 $('.filter-modal').addClass("active");
             });
 
+            // 초기화 버튼 활성화
+            $('.search-reset').click(function() {
+                $BtnCheckItems.removeClass("active");
+                $BtnCheckAll.addClass("active");
+            });
+
             // 팝업 활성 화 후 적용 버튼 누를 시
             $('.search-button, .close-button').click(function() {
-                var itemDataCode = $('button.dev-check-item').data('code');
                 $('.filter-modal').removeClass("active");
                 
-                if (dataCode === "") {
-                    $('input.dev-check-item').prop('checked', false);
-                    $('input.dev-check-all').prop('checked', true);
-                    $('input.dev-check-all').addClass("on");
-                } else {
-                    $('.dev-check-item').each(function() {
-                        var itemDataCode = $(this).data('code');
-                        if (itemDataCode === dataCode) {
-                            $(this).prop('checked', true);
-                        } else {
-                            $(this).prop('checked', false);
-                        }
+                if ($BtnCheckAll.hasClass("active")) {
+                    $inputCheckItems.prop('checked', false);
+                    $inputCheckAll.prop('checked', true);
+                    $inputCheckAll.addClass("on");
+                } else if (!$BtnCheckAll.hasClass("active")) {
+                    $BtnCheckItems.each(function() {
+                        $inputCheckAll.removeClass("on");
+                        $inputCheckAll.prop('checked', false);
+                        var currentItem = $(this);
+                        var currentDataCode = currentItem.data('code');
+
+                        $inputCheckItems.each(function() {
+                            var currentCheckbox = $(this);
+                            var currentVal = currentCheckbox.val();
+
+                            if (currentItem.hasClass("active") && currentDataCode == currentVal) {
+                                currentCheckbox.prop('checked', true);
+                            }
+                        });
                     });
+                    updateResultText();
                 }
             });
         });
