--- a/project/onpick/onpick_header.html
+++ b/project/onpick/onpick_header.html
@@ -21,13 +21,12 @@
 <body>
     <div class="wrap">
         <header>
-            <div class="header">
-                <div class="topArea">
+            <div id="header">
+                <div id="topArea">
                     <div class="topContent">
                         <div class="logo">                    
                             <a href="#"><img src="/project/images/logo_motion_pc.gif">
-                                <strong>JOBKOREA</strong>
-                            </a>
+                            <strong>JOBKOREA</strong></a>
                             <a href="#">
                                 <span>이직은 원픽</span>
                             </a>
@@ -42,7 +41,7 @@
                         </div>
                     </div>
                     <div id="headBenner" class="head_banner">
-                        <a class="bann-wrap" href="#">
+                        <a class="bann-wrap" href="#"><img src="/project/images/onepickHeader.png" alt="">
                             <div class="bann">head banner</div>
                         </a>
                     </div>
