--- a/project/onpick/onpick.html
+++ b/project/onpick/onpick.html
@@ -31,6 +31,8 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- jQuery 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- nav script -->
+    <script src="js/onpick_nav.js"></script>
     <script>
         $(document).ready(function() {
             // html 파일 불러오기
