--- a/project/onpick/onpick_nav.html
+++ b/project/onpick/onpick_nav.html
@@ -17,144 +17,8 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- jQuery 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            var $inputCheckAll = $('input.dev-check-all');
-            var $inputCheckItems = $('input.dev-check-item');
-            var $BtnCheckAll = $('button.dev-check-all');
-            var $BtnCheckItems = $('button.dev-check-item');
-            var $recruitTxt = $('.recruitTxt .dev-select-partName');
-            var $badgeCount = $('#badgeCount');
-
-            // nav swiper 부분 버튼 클릭 기능
-            $inputCheckAll.click(function() {
-                $inputCheckAll.addClass("on");
-                $recruitTxt.text("전체");
-                $('button.dev-check-item, button.dev-check-all').removeClass('active'); // 모든 버튼에서 'active' 클래스 제거
-                $BtnCheckAll.addClass('active');
-                if ($(this).prop('checked')) {
-                    $badgeCount.css('display', 'none');
-                    $badgeCount.text('0');
-                }
-                if ($(this).prop('checked')) {
-                    $inputCheckItems.prop('checked', false);
-                    e.preventDefault();
-                }
-            });
-
-            $inputCheckItems.click(function() {
-                $inputCheckAll.removeClass("on");
-                if ($(this).prop('checked')) {
-                    $inputCheckAll.prop('checked', false);
-                } else if($inputCheckItems.filter(':checked').length === 0) {
-                    $inputCheckAll.addClass("on");
-                    $inputCheckAll.prop('checked', true);
-                    $recruitTxt.text("전체");
-                    $badgeCount.css('display', 'none');
-                    $badgeCount.text('0');
-                    e.preventDefault();
-                }
-                updateResultText();
-                if ($inputCheckItems.prop('checked')) {
-                    $badgeCount.css('display', 'block');
-                    $badgeCount.text('1');
-                } else {
-                    $badgeCount.css('display', 'none');
-                    $badgeCount.text('0');
-                }
-            });
-
-            // 상세검색 버튼 기능
-            $BtnCheckAll.click(function() {
-                $BtnCheckAll.addClass("active");
-                $recruitTxt.text("전체");
-                if ($(this).hasClass('active')) {
-                    $BtnCheckItems.removeClass('active');
-                    e.preventDefault();
-                }
-            });
-
-            $BtnCheckItems.click(function() {
-                $(this).toggleClass("active");
-                if ($BtnCheckItems.hasClass('active')) {
-                    $BtnCheckAll.removeClass('active');
-                } else {
-                    $BtnCheckAll.addClass('active');
-                }
-            });
-
-            $inputCheckAll.on('click', function(e) {
-                e.preventDefault();
-            });
-
-            // checked 된 버튼에 따라 원픽공고 오른쪽에 버튼 이름 기재
-            function updateResultText() {
-                var selectedItems = $inputCheckItems.filter(':checked');
-                var selectedLabels = selectedItems.siblings('label').map(function() {
-                    return $(this).text();
-                }).get();
-                $recruitTxt.text(selectedLabels.join(', '));
-
-                $('button.dev-check-item, button.dev-check-all').removeClass('active'); // 모든 버튼에서 'active' 클래스 제거
-
-                selectedItems.each(function() {
-                    var itemValue = $(this).val();
-                    $('button.dev-check-item[data-code="' + itemValue + '"]').addClass('active');
-                });
-            }
-
-            // 오름차순 기능 드롭박스 활성화 유무 버튼
-            $('.drop-down-box .button-box').click(function() {
-                $('.drop-down-box .button-box').toggleClass("active");
-            });
-
-            // 드롭박스 버튼 클릭 시 적용
-            $('.sort-select-modal button').click(function() {
-                var code = $(this).data('code');
-                $('#searchOrder').val(code);
-                $('.sort-button').text($(this).text());
-            });
-            
-            // 필터 버튼 클릭 시 팝업 활성화
-            $('.filter-button').click(function() {
-                $('.filter-modal').addClass("active");
-            });
-
-            // 초기화 버튼 활성화
-            $('.search-reset').click(function() {
-                $BtnCheckItems.removeClass("active");
-                $BtnCheckAll.addClass("active");
-            });
-
-            // 팝업 활성 화 후 적용 버튼 누를 시
-            $('.search-button, .close-button').click(function() {
-                $('.filter-modal').removeClass("active");
-                
-                if ($BtnCheckAll.hasClass("active")) {
-                    $inputCheckItems.prop('checked', false);
-                    $inputCheckAll.prop('checked', true);
-                    $inputCheckAll.addClass("on");
-                } else if (!$BtnCheckAll.hasClass("active")) {
-                    $BtnCheckItems.each(function() {
-                        $inputCheckAll.removeClass("on");
-                        $inputCheckAll.prop('checked', false);
-                        var currentItem = $(this);
-                        var currentDataCode = currentItem.data('code');
-
-                        $inputCheckItems.each(function() {
-                            var currentCheckbox = $(this);
-                            var currentVal = currentCheckbox.val();
-
-                            if (currentItem.hasClass("active") && currentDataCode == currentVal) {
-                                currentCheckbox.prop('checked', true);
-                            }
-                        });
-                    });
-                    updateResultText();
-                }
-            });
-        });
-      </script>
+    <!-- nav script -->
+    <script src="js/onpick_nav.js"></script>
 </head>
 <body>
     <div class="wrap">
