--- a/project/main.html
+++ b/project/main.html
@@ -184,7 +184,7 @@
                   />
                 </div>
                 <div class="compName">(주)우아한형제들</div>
-                <div class="recruitInfo">각 부문별 경력/신입 인재영입</div>
+                <div class="recruitInfo">각 부문별 경력/신입 인재영입<br>&nbsp</div>
                 <div id="applyscrap">
                   <div class="applydate">상시채용</div>
                   <button onclick="" class="scrap">채용정보 스크랩</button>
@@ -411,7 +411,7 @@
                   />
                 </div>
                 <div class="compName">(주)우아한형제들</div>
-                <div class="recruitInfo">각 부문별 경력/신입 인재영입</div>
+                <div class="recruitInfo">각 부문별 경력/신입 인재영입<br>&nbsp</div>
                 <div id="applyscrap">
                   <div class="applydate">상시채용</div>
                   <button onclick="" class="scrap">채용정보 스크랩</button>
@@ -538,7 +538,7 @@
                   />
                 </div>
                 <div class="compName">(주)우아한형제들</div>
-                <div class="recruitInfo">각 부문별 경력/신입 인재영입</div>
+                <div class="recruitInfo">각 부문별 경력/신입 인재영입<br>&nbsp</div>
                 <div id="applyscrap">
                   <div class="applydate">상시채용</div>
                   <button onclick="" class="scrap">채용정보 스크랩</button>
@@ -665,7 +665,7 @@
                   />
                 </div>
                 <div class="compName">(주)우아한형제들</div>
-                <div class="recruitInfo">각 부문별 경력/신입 인재영입</div>
+                <div class="recruitInfo">각 부문별 경력/신입 인재영입<br>&nbsp</div>
                 <div id="applyscrap">
                   <div class="applydate">상시채용</div>
                   <button onclick="" class="scrap">채용정보 스크랩</button>
@@ -853,7 +853,7 @@
                   />
                 </div>
                 <div class="compName">(주)우아한형제들</div>
-                <div class="recruitInfo">각 부문별 경력/신입 인재영입</div>
+                <div class="recruitInfo">각 부문별 경력/신입 인재영입<br>&nbsp</div>
                 <div id="applyscrap">
                   <div class="applydate">상시채용</div>
                   <button onclick="" class="scrap">채용정보 스크랩</button>
@@ -980,7 +980,7 @@
                   />
                 </div>
                 <div class="compName">(주)우아한형제들</div>
-                <div class="recruitInfo">각 부문별 경력/신입 인재영입</div>
+                <div class="recruitInfo">각 부문별 경력/신입 인재영입<br>&nbsp</div>
                 <div id="applyscrap">
                   <div class="applydate">상시채용</div>
                   <button onclick="" class="scrap">채용정보 스크랩</button>
@@ -1196,7 +1196,7 @@
                           href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_NHN_[NHN] 글로벌 신규 소셜 카지노 게임사업 PM');"
-                          >[NHN] 글로벌 신규 소셜 카지노 게임사업 PM</a
+                          >[NHN] 글로벌 신규 소셜 카지노 게임<br>사업 PM</a
                         >
                       </li>
                       <li>
