--- a/project/onpick/onpick_header.html
+++ b/project/onpick/onpick_header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,18 +19,17 @@
     <!-- jQuery 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
-    <div class="wrap">
-        <header>
+
+    <header>
+        <div id="wrap">
             <div id="header">
                 <div id="topArea">
                     <div class="topContent">
-                        <div class="logo">                    
-                            <a href="#"><img src="/project/images/logo_motion_pc.gif">
-                            <strong>JOBKOREA</strong></a>
-                            <a href="#">
-                                <span>이직은 원픽</span>
-                            </a>
+                        <div class="logo">
+                            <a href="#"><img src="/project/images/logo_motion_pc.gif"></a>
+                            <a href="#"><span>이직은 원픽</span></a>
                         </div>
                         <div class="topMenu">
                             <ul>
@@ -41,15 +41,17 @@
                         </div>
                     </div>
                     <div id="headBenner" class="head_banner">
-                        <a class="bann-wrap" href="#"><img src="/project/images/onepickHeader.png" alt="">
-                            <div class="bann">head banner</div>
+                        <a class="bann-wrap" href="#"><img src="/project/onpick/images/onepickHeader.png" width="1242px" height="182">
+                            <div class="bann"></div>
                         </a>
                     </div>
                 </div>
             </div>
-        </header>
-    </div>
+        </div>
+    </header>
+
     <!-- swiper 스크립트 -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
+
 </html>
