--- a/project/onpick/onpick_footer.html
+++ b/project/onpick/onpick_footer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,69 +19,78 @@
     <!-- jQuery 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
     <div class="wrap">
         <footer>
             <div class="footer">
-                <div class="footer-wrap">
+                <div class="footer__wrap">
                     <h2 class="skip">잡코리아 기타 정보</h2>
-                    <div class="footer-advertisement">
-                        <h3>배너</h3>
-                        <p class="footer-advertisement--text">
-                            <iframe width="195"; height="70"; frameborder="0"; src="https://yellow.contentsfeed.com/RealMedia/ads/adstream_sx.ads/jobkorea/sub@Frame1"></iframe>
+                    <div class="footer__advertisement clear">
+                        <h3 class="blind">배너</h3>
+                        <p class="footer__advertisement--text">
+                            <iframe width="195" ; height="70" ; frameborder="0" ;
+                                src="https://yellow.contentsfeed.com/RealMedia/ads/adstream_sx.ads/jobkorea/sub@Frame1"></iframe>
                         </p>
-                        <p class="footer-advertisement--img">
-                            <iframe width="495"; height="150"; frameborder="0"; src="/project/onpick/images/onclick_footer Img.jpg"></iframe>
+                        <p class="footer__advertisement--img">
+                            <iframe width="495" ; height="150" ; frameborder="0" ;
+                                src="/project/onpick/images/onclick_footer Img.jpg"></iframe>
                         </p>
-                        <p class="footer-advertisement--text">
-                            <iframe width="195"; height="70"; frameborder="0" src="https://yellow.contentsfeed.com/RealMedia/ads/adstream_sx.ads/jobkorea/sub@Frame2"></iframe>
+                        <p class="footer__advertisement--text">
+                            <iframe width="195" ; height="70" ; frameborder="0"
+                                src="https://yellow.contentsfeed.com/RealMedia/ads/adstream_sx.ads/jobkorea/sub@Frame2"></iframe>
                         </p>
                     </div>
-                    <div class="footer-notice">
-                        <h3><a href="#">공지사항</a></h3>
-                        <dl class="footer_notice-wrap clear">
-                            <dt class=""footer_notice-title">
+                    <div class="footer__notice">
+                        <h3 class="blind">공지사항</a></h3>
+                        <dl class="footer__notice-wrap clear">
+                            <dt class=" footer__notice-title">
                                 <a href="#">공지사항</a>
                             </dt>
-                            <dd class="footer_notice-text">
+                            <dd class="footer__notice-text">
                                 <a href="#">
                                     <div class="ellipsis">6월 잡코리아x알바몬 설문이벤트 당첨자 발표</div>
                                     <em class="tahoma">23.06.29</em>
                                 </a>
                             </dd>
                         </dl>
-                        <ul class="list-service">
+                        <div class="blind">
+                        <ul class="list__service">
                             <li><a href="#">잡코리아TV</a></li>
                             <li><a href="#">전문채용관</a></li>
+                            <li><a href="#">슈퍼기업관</a></li>
                             <li><a href="#">슈퍼기업관 의뢰</a></li>
                             <li><a href="#">기업러닝</a></li>
                         </ul>
                         <span><a href="#">더 보기</a></span>
                         <div class="list-service_link">
-                            <a href="#"><h3>잡코리아 서비스 링크</h3></a>
-                            <ul>
-                                <li><a href="#">회사소개</a></li>
-                                <li><a href="#">운영사이트</a></li>
-                                <li><a href="#">이용약관</a></li>
-                                <li><a href="#"><strong>개인정보처리방침</strong></a></li>
-                                <li><a href="#">Open API</a></li>
-                                <li><a href="#">광고문의</a></li>
-                                <li><a href="#">제휴문의</a></li>
-                                <li><a href="#">고객센터</a></li>
-                            </ul>
+                                <h3>잡코리아 서비스 링크</h3>
+                                <ul>
+                                    <li><a href="#">회사소개</a></li>
+                                    <li><a href="#">운영사이트</a></li>
+                                    <li><a href="#">이용약관</a></li>
+                                    <li><a href="#"><strong>개인정보처리방침</strong></a></li>
+                                    <li><a href="#">Open API</a></li>
+                                    <li><a href="#">광고문의</a></li>
+                                    <li><a href="#">제휴문의</a></li>
+                                    <li><a href="#">고객센터</a></li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="footer-help">
                             <h3 class="blind">고객센터</h3>
                             <dl>
-                                <dt>고객센터</dt>
-                                    <dd>1588-9351</dd>
-                                    <dd>(평일 09:00 ~ 19:00 토요일 09:00 ~ 15:00)</dd>
-                                <dt>FAX</dt>
-                                    <dd>02-565-9351</dd>
-                                <dt>Email</dt>
+                                <dt class="footer__help-title">고객센터</dt>
+                                <dd class="footer_help-text">1588-9351</dd>
+                                <dd>(평일 09:00 ~ 19:00 토요일 09:00 ~ 15:00)</dd>
+                                <dl class="footer_help-wrap footer_help-wrap--fax">
+                                    <dt class="footer_help-title">FAX</dt>
+                                    <dd class="footer_help-text">02-565-9351</dd>
+                                    <dt>Email</dt>
                                     <dd>
-                                    <a href="https://www.hidoc.co.kr/healthstory/news/C0000629775">gkwls8561@gmail.com</a>
+                                        <a href="https://www.hidoc.co.kr/healthstory/news/C0000629775">gkwls8561@gmail.com</a>
                                     </dd>
+                                </dl>
                             </dl>
                         </div>
                     </div>
@@ -91,4 +101,5 @@
     <!-- swiper 스크립트 -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
+
 </html>
