onePick footer html, css
.

--- a/project/footer.html
+++ b/project/footer.html
@@ -59,11 +59,10 @@
                     </dl>
                     <dl class="footer__help-wrap footer__help-wrap--email">
                         <dt class="footer__help-title">Email</dt>
-                        <dd class="footer__help-text"><a href="mailto:helpdesk@jobkorea.co.kr"
-                                class="footer__help-link">helpdesk@jobkorea.co.kr</a></dd>
+                        <dd class="footer__help-text"><a href="#" class="footer__help-link">gkwls8561@gmail.com</a></dd>
                     </dl>
                     <dl class="footer__help-wrap footer__help-wrap--consult">
-                        <a href="https://talk.naver.com/ct/wcb8l5" target="_blank" title="새창" class="footer__help-link">
+                        <a href="https://talk.naver.com/ct/wcb8l5" title="새창" class="footer__help-link">
                             <img src="/project/images/톡톡.jpg" width="20" height="20">
                             <span class="footer__help--icon"></span>
                             <span class="footer__help--text">톡톡상담</span>
@@ -111,30 +110,29 @@
                             <a href="https://www.jobkorea.co.kr/help/notice/view?no=14626" align="left">2023 한국산업의
                                 브랜드파워 1위<br />(취업전문포털 부문)</a></li>
                         <li class="footer__award-item footer__award-item--bcli">
-                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=14427" target="_blank">2022 브랜드 고객
+                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=14427">2022 브랜드 고객
                                 충성도<br>대상 수상</a></li>
                         <li class="footer__award-item footer__award-item--ismsp">
-                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=14625" target="_blank">[인증범위] 온라인
+                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=14625">[인증범위] 온라인
                                 리크루팅 서비스<br />[유효기간] 2022.01.19 ~ 2025.01.18</a></li>
                         <li class="footer__award-item footer__award-item--fav">
-                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=14276" target="_blank">
+                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=14276">
                                 한국대학신문 대상<br>취업플랫폼 선호도 1위</a></li>
                         <li class="footer__award-item footer__award-item--kict">
-                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=13874" target="_blank">업계최초!
+                            <a href="https://www.jobkorea.co.kr/help/notice/view?no=13874">업계최초!
                                 K-ICT<br>정보보호대상 우수상 수상</a></li>
 
                     </ul>
-                    <a href="http://company.jobkorea.co.kr/cyber_pr/default.asp#award" class="footer__award--more awardMore" target="_blank"
+                    <a href="http://company.jobkorea.co.kr/cyber_pr/default.asp#award" class="footer__award--more awardMore"
                         class="footer__award--more awardMore">더보기</a>
                 </div>
 
                 <div class="footer__mobile-service">
-                    <a href="http://company.jobkorea.co.kr/Service/default.asp#mobile" target="_blank"
+                    <a href="http://company.jobkorea.co.kr/Service/default.asp#mobile"
                         class="footer__mobile-service--information">
                         <img src="https://i.jobkorea.kr/content/images/main/footer_mobile_info.png" alt="모바일 서비스 안내">
                     </a>
-                    <a href="https://m.jobkorea.co.kr" class="footer__mobile-service--link" return false;"
-                        target="_blank">
+                    <a href="https://m.jobkorea.co.kr" class="footer__mobile-service--link" return false;">
                         <img src="https://i.jobkorea.kr/content//images/main/footer_mobile_link.png" alt="모바일 버전보기">
                     </a>
                 </div>
