--- a/project/onpick/onpick_header.html
+++ b/project/onpick/onpick_header.html
@@ -28,7 +28,7 @@
                 <div id="topArea">
                     <div class="topContent">
                         <div class="logo">
-                            <a href="#"><img src="/project/images/logo_motion_pc.gif"></a>
+                            <a href="#"><img src="/project/images/logo_motion_pc.gif" width="143px" height="40"></a>
                             <a href="#"><span>이직은 원픽</span></a>
                         </div>
                         <div class="topMenu">
@@ -40,10 +40,10 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="headBenner" class="head_banner">
-                        <a class="bann-wrap" href="#"><img src="/project/onpick/images/onepickHeader.png" width="1242px" height="182">
+                    <!-- <div id="headBenner" class="head_banner">
+                        <a class="bann-wrap" href="#"><img src="/project/onpick/images/onepickHeader.png" width="1240" height="90">
                             <div class="bann"></div>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
