--- a/project/onpick/onpick_footer.html
+++ b/project/onpick/onpick_footer.html
@@ -70,7 +70,7 @@
                 </dl>
                 <dl class="footer__help-wrap footer__help-wrap--email">
                     <dt class="footer__help-title"><span>Email</span></dt>
-                    <dd class="footer__help-text"><a href="#" class="footer__help-link">gkwls</a></dd>
+                    <dd class="footer__help-text"><a href="#" class="footer__help-link">gkwls8561@gamil.com</a></dd>
                 </dl>
                 
                 <dl class="footer__help-wrap footer__help-wrap--consult">
