--- a/project/onpick/onpick_main.html
+++ b/project/onpick/onpick_main.html
@@ -4147,12 +4147,16 @@
                             </div>
                         </div>
                     </li>
-
                 </ul>
             </div>
         </main>
     </div>
     <!-- swiper 스크립트 -->
+
+<!-- 메뉴클릭시 보이게 하기 -->
+    <script>
+
+    </script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
 </html>
