--- a/project/onpick/onpick.html
+++ b/project/onpick/onpick.html
@@ -32,7 +32,6 @@
     <!-- jQuery 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- nav script -->
-    <script src="js/onpick_nav.js"></script>
     <script>
         $(document).ready(function() {
             // html 파일 불러오기
@@ -64,6 +63,14 @@
                     $('.wrap.footer').html(footerrefine);
                 }
             });
+
+            $.ajax({
+                url : "js/onpick_nav.js",
+                success : function(result) {
+                    var headerrefine = $(".wrap.header").html(result).find('header');
+                    $('.wrap.header').html(headerrefine);
+                }
+            });
         })
     </script>
 </head>
@@ -82,5 +89,6 @@
     </div>
     <!-- swiper 스크립트 -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/onpick_nav.js"></script>
 </body>
 </html>
