--- a/project/onpick/onpick_main.html
+++ b/project/onpick/onpick_main.html
@@ -23,7 +23,7 @@
         <main class="mainwrap">
             <div>
                 <ul class="bannerlist" id="banner_list">
-                    <li class="bannereach firstcat">
+                    <li class="bannereach firstcat" id="firstcat">
                         <div class="scrapbtn"><img src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='19' height='18'%3E%3Cg data-name='%E1%84%83%E1%85%A1%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%85%E1%85%A9%E1%84%83%E1%85%B3 (4)'%3E%3Cpath data-name='%ED%8C%A8%EC%8A%A4 59' d='M9.506 14.6l-5.562 2.9 1.062-6.152L.5 6.992 6.719 6.1 9.5.5l2.781 5.6 6.219.892-4.506 4.356 1.062 6.152z' fill='rgba(23,23,23,0.3)'/%3E%3Cpath data-name='%ED%8C%A8%EC%8A%A4 60' d='M9.5 0a.73.73 0 01.654.4l2.54 5.1 5.68.816a.73.73 0 01.4 1.247l-4.113 3.97.97 5.6a.73.73 0 01-1.059.77l-5.07-2.648-5.08 2.65a.732.732 0 01-1.059-.772l.97-5.6L.22 7.563a.729.729 0 01.4-1.247L6.3 5.5 8.839.4A.73.73 0 019.5 0zm0 2.37L7.444 6.5a.73.73 0 01-.55.4l-4.583.658 3.318 3.2a.729.729 0 01.213.649l-.784 4.533 4.11-2.143a.732.732 0 01.677 0l4.1 2.142-.784-4.53a.729.729 0 01.213-.649l3.318-3.2-4.586-.66a.73.73 0 01-.55-.4z' fill='%23fff' fill-rule='evenodd'/%3E%3C/g%3E%3C/svg%3E"><span class="scraphover">공고스크랩</span></div>
                         <div class="companyimg">
                             <img src="https://file1.jobkorea.co.kr//banner/images/32%ED%99%94%ED%95%99%EC%97%90%EB%84%88%EC%A7%8004.jpg" alt="noimg">
