--- a/project/onpick/onpick.html
+++ b/project/onpick/onpick.html
@@ -66,6 +66,7 @@
             });
         })
     </script>
+    <script src="./js/onpick_main.js"></script>
 </head>
 <body>
     <div class="wrap header">
