--- a/project/onpick/onpick_header.html
+++ b/project/onpick/onpick_header.html
@@ -28,7 +28,7 @@
                 <div id="topArea">
                     <div class="topContent">
                         <div class="logo">
-                            <a href="#"><img src="/project/images/logo_motion_pc.gif" width="143px" height="40"></a>
+                            <a href="#"><img src="/project/images/logo_motion_pc.gif" width="143" height="25"></a>
                             <a href="#"><span>이직은 원픽</span></a>
                         </div>
                         <div class="topMenu">
